@@ -9,6 +9,7 @@
 - Allow ausearch/report to specify multiple node names (Lenny Bruzenak)
 - Correct checking of != operator in audit_rule_fieldpair_data
 - Updated syscall table for 2.6.31 kernel
+- In auditd reset syslog warnings if disk space becomes available
 
 1.7.13
 - Disable libev asserts unless --with-debug passed to configure
